# Chatbot-using-langchain

./: .gitignore  chatbot.ipynb  main.py  pyproject.toml
notebook/: hnsw_index.faiss
src/ingestion/: data_ingestion.py
src/rag/: chain.py
src/vectorstore/: embedding.py
