[project]
name = "chatbot-using-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "python-dotenv",
    "tiktoken",
    "youtube-transcript-api",
    "dotenv",
]

[project.scripts]
chatbot-pkg = "Chatbot-using-langchain:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
